# pccx-lab

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md  dummy_trace.pccx  test_script.tcl  todolist.md
.github/workflows/: ci.yml
crates/ai_copilot/: CHANGELOG.md
crates/core/: Cargo.toml
crates/core/src/: api_ring.rs  bottleneck.rs  hw_model.rs  isa_replay.rs  lib.rs  pccx_format.rs  proposals.rs  status.rs  vcd_writer.rs  workflows.rs
crates/core/tests/: integration_test.rs  json_boundary_examples.rs  public_boundary_docs.rs  public_claim_guards.rs  workflow_proposals_cli.rs
crates/cx/: Cargo.toml
crates/cx/src/: lib.rs
crates/evolve/: CHANGELOG.md
crates/lsp/: CHANGELOG.md  Cargo.toml
crates/lsp/src/: cx_provider.rs  isa_provider.rs  lib.rs  monaco_bridge.rs  sv_diagnostics.rs  sv_hover.rs
crates/remote/: CHANGELOG.md  Cargo.toml
crates/reports/: CHANGELOG.md
crates/uvm_bridge/: CHANGELOG.md
crates/uvm_bridge/src/: lib.rs
crates/verification/: Cargo.toml
cycle/: HALT  ROUNDS.md  STATE.json
cycle/round_001/: implemented_T1.md  implemented_T2.md  research_findings.md  roadmap.md
cycle/round_002/: roadmap.md
cycle/round_003/: implemented_T1.md  implemented_T3.md  research_findings.md
cycle/round_005/: implemented_T1.md  implemented_T2.md  judge_report.md  roadmap.md
cycle/round_006/: implemented_T-1.md  implemented_T-3.md
docs/: CLI_BOUNDARY_EXAMPLES.md  CLI_CORE_BOUNDARY.md  Makefile  conf.py  getting-started.md  index.rst  pccx-format.md
docs/design/: phase3_remote_backend.md  phase4_insane_reports.md  phase5_alphaevolve.md
docs/examples/: run-status.example.json  workflow-descriptors.example.json
docs/ko/: conf.py  getting-started.md  index.rst  pccx-format.md
scripts/: doctor.sh  json_boundary_shape_validator.py  pccx-lab-boundary-smoke.sh  run_dev.sh  setup_env.sh  test-json-boundary-inventory.sh  test-json-boundary-shapes.sh
scripts/fixtures/: json-boundary-inventory.json
src/ai_copilot/: Cargo.toml
src/ai_copilot/src/: lib.rs
src/authoring/: CHANGELOG.md  Cargo.toml
src/core/: CHANGELOG.md  Cargo.toml
src/core/src/: api_ring.rs  bottleneck.rs  chrome_trace.rs  cycle_estimator.rs  lib.rs  license.rs  report.rs  roofline.rs  simulator.rs  trace.rs
src/core/tests/: integration_test.rs
src/evolve/: Cargo.toml
src/remote/: CHANGELOG.md
src/reports/: Cargo.toml
src/ui/: package-lock.json  package.json
src/uvm_bridge/: Cargo.toml
src/verification/: CHANGELOG.md
ui/e2e/: requirements.txt
ui/src/: App.css  App.tsx  CodeEditor.tsx  CxPlayground.tsx  LabStatusPanel.tsx  MainToolbar.tsx  MenuBar.tsx  MetricTree.tsx  NodeEditor.tsx  OccupancyCalculator.tsx  PipelineDiagram.tsx  TitleBar.tsx  VerificationSuite.tsx  labStatus.ts  monarch_cx.ts
ui/src-tauri/: Cargo.toml  tauri.conf.json
(+36 files in other folders)
