[package]
name = "pccx-cx"
version.workspace = true
description = "CX language core — lexer, parser, evaluator for pccx-lab"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
