[package]
name = "pccx-core"
version = "0.1.0"
edition = "2021"

[features]
default = []
enterprise = []

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
bincode = "1.3.3"

[dev-dependencies]
# pccx-core itself (via path) is used in integration tests
# No extra test-only deps needed — the workspace provides everything

