[package]
name = "pccx-evolve"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
# DSE / speculative-decoding / PRM-gated evolutionary loop primitives.
# Roadmap home for Phase 5A (chip DSE) + 5D/5E (Model->ISA-API->RTL).
# Current scope: speculative decoding data primitives (longest matching
# prefix, per-step accept stats, p50/p95 aggregation) that the Sail
# execute pass and the UVM scoreboard both reuse.

[dependencies]
serde.workspace = true
