[package]
name = "pccx-reports"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
# Report generator — Markdown / PDF / HTML output from a `pccx-core`
# trace + synth report.  Kept separate so report formats can evolve
# independently of the .pccx parser.

[dependencies]
pccx-core = { path = "../core" }
anyhow.workspace = true
