[package]
name = "pccx-uvm-bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
description = "SystemVerilog DPI-C bridge for the pccx NPU cycle estimator"

# Export as a C-compatible shared library for DPI-C import in simulators
# (Synopsys VCS, Cadence Xcelium, Questa, etc.)
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pccx-core = { path = "../core" }
